--- a/client/src/scss/_header.scss
+++ b/client/src/scss/_header.scss
@@ -12,7 +12,7 @@ $primary-blue: #59A5FF;
 #background-image {
   position: relative;
   background: url('../img/background2.jpg') no-repeat;
-  background-position: top;
+  background-position: right top;
   background-size: cover;
   width: 100%;
   height: 100vh;
