--- a/client/src/scss/_header.scss
+++ b/client/src/scss/_header.scss
@@ -43,10 +43,32 @@ $primary-blue: #59A5FF;
     letter-spacing: 2px;
   }
 
-  .sign-in {
+  #sign-up, #sign-in {
     margin-top: 10px;
     width: 150px;
     padding: 10px 20px;
     border-radius: 25px;
+    font-weight: 600;
+    border-width: 2px;
+    border-color: white;
+  }
+
+  #sign-up {
+    background-color: white;
+    color: black;
+  }
+
+  #sign-up:hover {
+    color: white;
+    background-color: black;
+  }
+
+  #sign-in {
+    color: white;
+  }
+
+  #sign-in:hover {
+    color: black;
+    background-color: white;
   }
 }
