--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -10,6 +10,9 @@
 .nav-link:hover {
   border-bottom: 2px solid #ff0080; }
 
+.navbar-toggler {
+  border-color: white; }
+
 .header-brand {
   font-family: 'Baloo', sans-serif;
   font-size: 2em; }
