--- a/client/src/scss/_header.scss
+++ b/client/src/scss/_header.scss
@@ -15,6 +15,10 @@ $primary-blue: #59A5FF;
    border-bottom: 2px solid #ff0080;
  }
 
+ .navbar-toggler {
+  border-color: white;
+ }
+
  .header-brand {
   font-family: 'Baloo', sans-serif;
   font-size: 2em;
